spring-cashier/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cashier-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-cashier
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-cashier
    spec:
      containers:
      - name: spring-cashier
        image: anhquangsjsu/spring-cashier
        ports: 
        - containerPort: 8080
